// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vuex-bound should handle mapModelsToState for module name 1`] = `
Object {
  "modelName1": Object {
    "get": [Function],
    "set": [Function],
  },
  "modelName2": Object {
    "get": [Function],
    "set": [Function],
  },
}
`;

exports[`vuex-bound should handle mapModelsToState for sub-module name 1`] = `
Object {
  "modelName1": Object {
    "get": [Function],
    "set": [Function],
  },
  "modelName2": Object {
    "get": [Function],
    "set": [Function],
  },
}
`;

exports[`vuex-bound should handle mapModelsToState for sub-sub-module name 1`] = `
Object {
  "modelName1": Object {
    "get": [Function],
    "set": [Function],
  },
  "modelName2": Object {
    "get": [Function],
    "set": [Function],
  },
  "modelName3": Object {
    "get": [Function],
    "set": [Function],
  },
}
`;
